--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.14",
     "cross-env": "^7.0.3",
     "ndb": "^1.1.5",
@@ -22,7 +24,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
@@ -30,7 +32,6 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
-    "morgan": "^1.10.0",
-    "xss-clean": "^0.1.4"
+    "morgan": "^1.10.0"
   }
 }
