--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.14",
+    "@types/validator": "^13.12.3",
     "cross-env": "^7.0.3",
     "ndb": "^1.1.5",
     "nodemon": "^3.1.9",
@@ -32,6 +33,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.15.0"
   }
 }
