--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.14",
+    "@types/socket.io": "^3.0.1",
     "@types/validator": "^13.12.3",
     "cross-env": "^7.0.3",
     "ndb": "^1.1.5",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.0"
   }
 }
