--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.1.0",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "socket.io": "^4.8.1",
