--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
     "prod": "tsc && cross-env NODE_ENV=production node dist/server.js",
     "dev": " nodemon src/server.ts",
     "debug": "ndb src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.14",
     "@types/socket.io": "^3.0.1",
     "@types/validator": "^13.12.3",
     "cross-env": "^7.0.3",
-    "ndb": "^1.1.5",
+    "jest": "^29.7.0",
+    "ndb": "^0.2.4",
     "nodemon": "^3.1.9",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
@@ -38,7 +44,9 @@
     "lru-cache": "^11.1.0",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
+    "tsyringe": "^4.10.0",
     "validator": "^13.15.0"
   }
 }
