--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "prod": "tsc && cross-env NODE_ENV=production node dist/server.js",
     "dev": " nodemon src/server.ts",
+    "worker:email": "ts-node src/workers/emailWorker.ts",
+    "test:worker:email": "ts-node src/workers/test.ts",
     "debug": "ndb src/server.ts",
     "build": "tsc",
     "test": "jest",
@@ -30,7 +32,10 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.835.0",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.56.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -40,10 +45,12 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.1.0",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "socket.io": "^4.8.1",
     "validator": "^13.15.0"
   }
